...
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:gravity="center">

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/coordinator_overview"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
                android:id="@+id/swipe_container"
                android:layout_width="match_parent"
...
                android:text="@string/no_notes"
                android:textColor="@android:color/darker_gray"
                android:textSize="30sp"
                android:visibility="gone" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_button"
                android:layout_width="@dimen/fab_size"
                android:layout_height="@dimen/fab_size"
                android:layout_gravity="right|bottom"
                android:layout_marginTop="-28dp"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
...
